image overflow bug fixed

--- a/front/src/app/components/main/shop/shop.component.css
+++ b/front/src/app/components/main/shop/shop.component.css
@@ -604,12 +604,16 @@
   width: 100%;
   height: 250px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .product-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain; /* or 'cover' depending on the effect you want */
+  overflow: hidden;
   transition: transform 0.3s ease;
 }
 
